[gd_scene load_steps=50 format=3 uid="uid://csiod82kxowh"]

[ext_resource type="Script" path="res://Scenes/Bosses/Squirrel_Boss/squirrel_boss.gd" id="1_0fiwx"]
[ext_resource type="Texture2D" uid="uid://brxvre48iwt5d" path="res://rogue_assets/icon.svg" id="1_ju6xw"]
[ext_resource type="Texture2D" uid="uid://di805a8mgc8rg" path="res://assets/Boss-Sprites/Squirrel_Boss/acorn.png" id="2_k1ibh"]
[ext_resource type="Shader" path="res://rogue_assets/white_flash_sprite.gdshader" id="3_n1cm5"]
[ext_resource type="Script" path="res://Scripts/States/State Machine.gd" id="3_yr0b0"]
[ext_resource type="Script" path="res://Scenes/Bosses/Squirrel_Boss/States/idle_state.gd" id="4_c4fc1"]
[ext_resource type="Texture2D" uid="uid://bmgxuxdof7prq" path="res://assets/Boss-Sprites/Squirrel_Boss/Squirrel Sprite Sheet.png" id="4_nmci2"]
[ext_resource type="Script" path="res://Scenes/Player/components/move_component.gd" id="4_qeouk"]
[ext_resource type="Script" path="res://Scenes/Bosses/Squirrel_Boss/States/move_state.gd" id="5_qxpmg"]
[ext_resource type="PackedScene" uid="uid://bowvrvbt7us8p" path="res://Scenes/Components/health_component.tscn" id="6_4rsfh"]
[ext_resource type="Script" path="res://Scenes/Bosses/Squirrel_Boss/States/barrage_state.gd" id="7_ce2w4"]
[ext_resource type="Script" path="res://Scenes/Bosses/Squirrel_Boss/States/laser_state_1.gd" id="7_uofwd"]
[ext_resource type="PackedScene" uid="uid://cbe5ubp1ochyn" path="res://Scenes/Components/hitbox_component.tscn" id="7_x02uy"]
[ext_resource type="Script" path="res://Scenes/Bosses/Squirrel_Boss/States/dead_state.gd" id="8_3cer5"]
[ext_resource type="Script" path="res://Scenes/Bosses/Squirrel_Boss/States/laser_state_2.gd" id="8_8dok0"]
[ext_resource type="PackedScene" uid="uid://bbnsgdhlwu3e5" path="res://Scenes/GUI/Enemy_Health_Bar/healthbar.tscn" id="8_ytuw3"]
[ext_resource type="FontFile" uid="uid://de0dgh470m2s5" path="res://assets/fonts/superstar_memesbruh03.ttf" id="9_j5hj4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_02f7v"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h1u7y"]
shader = ExtResource("3_n1cm5")
shader_parameter/active = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_i02tf"]
atlas = ExtResource("4_nmci2")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iumt2"]
atlas = ExtResource("4_nmci2")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gb2cu"]
atlas = ExtResource("4_nmci2")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4jda"]
atlas = ExtResource("4_nmci2")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0lbq"]
atlas = ExtResource("4_nmci2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vdfq"]
atlas = ExtResource("4_nmci2")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijq7l"]
atlas = ExtResource("4_nmci2")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rk6j7"]
atlas = ExtResource("4_nmci2")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ce5k8"]
atlas = ExtResource("4_nmci2")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqxpj"]
atlas = ExtResource("4_nmci2")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_am4pn"]
atlas = ExtResource("4_nmci2")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uivf5"]
atlas = ExtResource("4_nmci2")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcfiy"]
atlas = ExtResource("4_nmci2")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lye2x"]
atlas = ExtResource("4_nmci2")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqx8c"]
atlas = ExtResource("4_nmci2")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1432h"]
atlas = ExtResource("4_nmci2")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nhfqh"]
atlas = ExtResource("4_nmci2")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b03w5"]
atlas = ExtResource("4_nmci2")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2dll"]
atlas = ExtResource("4_nmci2")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mf2fi"]
atlas = ExtResource("4_nmci2")
region = Rect2(224, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_7nlas"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i02tf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iumt2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gb2cu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4jda")
}],
"loop": true,
"name": &"dead",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0lbq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vdfq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijq7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rk6j7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ce5k8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqxpj")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_am4pn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uivf5")
}],
"loop": true,
"name": &"laser",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcfiy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lye2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqx8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1432h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhfqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b03w5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2dll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mf2fi")
}],
"loop": true,
"name": &"move",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_g56rs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6qkpp"]
resource_name = "barrage"
length = 10.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"laser"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 5, 5.1, 5.2, 5.3, 5.4, 5.5, 5.6, 5.7, 5.8, 5.9, 6, 6.1, 6.2, 6.3, 6.4, 6.5, 6.6, 6.7, 6.8, 6.9, 7, 7.1, 7.2, 7.3, 7.4, 7.5, 7.6, 7.7, 7.8, 7.9, 8, 8.1, 8.2, 8.3, 8.4, 8.5, 8.6, 8.7, 8.8, 8.9, 9, 9.1, 9.2, 9.3, 9.4, 9.5, 9.6, 9.7, 9.8, 9.9, 10, 10.1, 10.2, 10.3, 10.4, 10.5, 10.6, 10.7, 10.8, 10.9, 11, 11.1, 11.2, 11.3, 11.4, 11.5, 11.6, 11.7, 11.8, 11.9, 12, 12.1, 12.2, 12.3, 12.4, 12.5, 12.6, 12.7, 12.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Acorn_2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(81, -70), Vector2(81, -600)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Acorn_1:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-65, -70), Vector2(-65, -600)]
}

[sub_resource type="Animation" id="Animation_sq6u7"]
resource_name = "dead"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"dead"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.65098)]
}

[sub_resource type="Animation" id="Animation_23eop"]
resource_name = "idle"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Acorn_1:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-65, -70), Vector2(-65, -65), Vector2(-65, -70)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Acorn_2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(81, -65), Vector2(81, -70), Vector2(81, -65)]
}

[sub_resource type="Animation" id="Animation_tk6u1"]
resource_name = "laser"

[sub_resource type="Animation" id="Animation_o0kc7"]
resource_name = "move"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"move"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g6h8w"]
_data = {
"RESET": SubResource("Animation_g56rs"),
"barrage": SubResource("Animation_6qkpp"),
"dead": SubResource("Animation_sq6u7"),
"idle": SubResource("Animation_23eop"),
"laser": SubResource("Animation_tk6u1"),
"move": SubResource("Animation_o0kc7")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_qt23l"]
radius = 17.8122

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h1lid"]
size = Vector2(105, 95)

[node name="squirrel_boss" type="CharacterBody2D"]
script = ExtResource("1_0fiwx")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -65)
texture = ExtResource("1_ju6xw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -11)
shape = SubResource("RectangleShape2D_02f7v")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_h1u7y")
position = Vector2(1, -140)
scale = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_7nlas")
animation = &"dead"
frame = 1

[node name="Acorn_2" type="Sprite2D" parent="."]
position = Vector2(81, -549.255)
scale = Vector2(3, 3)
texture = ExtResource("2_k1ibh")

[node name="Acorn_1" type="Sprite2D" parent="."]
position = Vector2(-65, -549.255)
scale = Vector2(3, 3)
texture = ExtResource("2_k1ibh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite2D")
libraries = {
"": SubResource("AnimationLibrary_g6h8w")
}

[node name="Too_close_move" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Too_close_move"]
position = Vector2(0, -61)
scale = Vector2(6.88415, -7.4621)
shape = SubResource("CircleShape2D_qt23l")

[node name="state_machine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("3_yr0b0")
starting_state = NodePath("idle_state")

[node name="idle_state" type="Node" parent="state_machine" node_paths=PackedStringArray("move_state", "barrage_state", "laser_state_1", "laser_state_2")]
script = ExtResource("4_c4fc1")
move_state = NodePath("../move_state")
barrage_state = NodePath("../barrage_state")
laser_state_1 = NodePath("../../laser_state_machine/laser_state_1")
laser_state_2 = NodePath("../../laser_state_machine/laser_state_2")
animation_name = "idle"

[node name="attack_intervals" type="Timer" parent="state_machine/idle_state"]

[node name="move_state" type="Node" parent="state_machine" node_paths=PackedStringArray("idle_state")]
script = ExtResource("5_qxpmg")
idle_state = NodePath("../idle_state")
animation_name = "move"

[node name="barrage_state" type="Node" parent="state_machine" node_paths=PackedStringArray("idle_state", "laser_state_1", "laser_state_2")]
script = ExtResource("7_ce2w4")
idle_state = NodePath("../idle_state")
laser_state_1 = NodePath("../../laser_state_machine/laser_state_1")
laser_state_2 = NodePath("../../laser_state_machine/laser_state_2")
animation_name = "barrage"

[node name="dead_state" type="Node" parent="state_machine"]
script = ExtResource("8_3cer5")
animation_name = "dead"

[node name="laser_state_machine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("3_yr0b0")
starting_state = NodePath("../state_machine/idle_state")

[node name="laser_state_1" type="Node" parent="laser_state_machine" node_paths=PackedStringArray("idle_state", "barrage_state")]
script = ExtResource("7_uofwd")
idle_state = NodePath("../../state_machine/idle_state")
barrage_state = NodePath("../../state_machine/barrage_state")
animation_name = "idle"

[node name="laser_state_2" type="Node" parent="laser_state_machine" node_paths=PackedStringArray("idle_state", "barrage_state")]
script = ExtResource("8_8dok0")
idle_state = NodePath("../../state_machine/idle_state")
barrage_state = NodePath("../../state_machine/barrage_state")
animation_name = "idle"

[node name="move_component" type="Node" parent="."]
script = ExtResource("4_qeouk")

[node name="HealthComponent" parent="." node_paths=PackedStringArray("dead_state") instance=ExtResource("6_4rsfh")]
position = Vector2(0, -94)
MAX_HEALTH = 125
dead_state = NodePath("../state_machine/dead_state")

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("7_x02uy")]
visible = false
collision_layer = 8
collision_mask = 17
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(0, -61)
shape = SubResource("RectangleShape2D_h1lid")

[node name="gui" type="CanvasLayer" parent="."]

[node name="healthbar" parent="gui" instance=ExtResource("8_ytuw3")]
offset_left = 69.0
offset_top = 596.0
offset_right = 1088.0
offset_bottom = 633.0

[node name="Label" type="Label" parent="gui"]
offset_left = 325.0
offset_top = 565.0
offset_right = 1359.0
offset_bottom = 647.0
theme_override_fonts/font = ExtResource("9_j5hj4")
theme_override_font_sizes/font_size = 31
text = "Lord Sciuridae, master of the treetops"

[connection signal="area_entered" from="Too_close_move" to="state_machine/idle_state" method="_on_too_close_move_area_entered"]
[connection signal="area_exited" from="Too_close_move" to="state_machine/idle_state" method="_on_too_close_move_area_exited"]
[connection signal="timeout" from="state_machine/idle_state/attack_intervals" to="state_machine/idle_state" method="_on_attack_intervals_timeout"]
